# hci-ai-interview-assistant

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  FRONTEND_DESIGN.md  README-en.md  README.md  TROUBLESHOOTING.md  compose.sh  docker-compose.dev.yml  docker-compose.yml  egress.yaml  livekit.yaml  package.json  pyproject.toml  render.yaml
.github/workflows/: package-images.yml
backend/asr/: __init__.py  qwen_realtime.py
backend/auth/: __init__.py  exceptions.py  middleware.py  models.py  service.py  supabase_client.py
backend/database/: __init__.py  utils.py  (+2 more)
docs/: port-configuration.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
presentations/: hci-ai-interview-assistant-intro-keynote-export.pptx  hci-ai-interview-assistant-intro.key  hci-ai-interview-assistant-intro.pptx
scripts/: clean.sh  dev.sh  e2e-full-flow.mjs  e2e.sh  experiment_speech_analysis.py  generate_mock_resumes.py  mock_mineru_open_api.py  setup_face_assets.sh  speech_analysis.sh  test.sh
spec/: FRONTEND_DESIGN.md  digital-interviewer-meeting-experience.md  evaluation-metrics.md  execution-process.md  frontend-quality-plan.md  goals.md  implementation-plan.md  prd.md  problem-related-work-solution.md  report-video-playback-fix-plan.md  video-recording-mvp-plan.md  video-recording-reconnect-plan.md
src/: interviewSession.js  questionEngine.js
stitch_elite_digital_presence/: design.md
tests/: interviewSession.test.js  questionEngine.test.js
(+167 files in other folders)
