[project]
name = "hci-ai-interview-assistant"
version = "0.1.0"
description = "AI-assisted interview MVP with recruiter setup, LiveKit interview room, and auditable reports."
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "soundfile>=0.13.1",
    # 认证系统依赖
    "supabase>=2.29.0",
]

[tool.uv]
package = false
