[project]
name = "hci-ai-interview-assistant"
version = "0.1.0"
description = "AI-assisted interview MVP with recruiter setup, LiveKit interview room, and auditable reports."
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "scipy>=1.17.1",
    "soundfile>=0.13.1",
    "dashscope>=1.20.0",
    "websockets>=13.0",
    # 认证系统依赖
    "supabase>=2.29.0",
    # 开发热重载
    "watchfiles>=0.21",
    "livekit-api>=1.1.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "reportlab>=4.5.1",
]
